add task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -3,10 +3,10 @@
   flex-wrap: wrap;
   align-items: center;
   align-content: center;
-  padding: 10px;
+  padding: $cal-padding;
   gap: 1px;
   height: 100vh;
-  width: $square * $week-days + $indentations-size * $week-days;
+  width: $week-days * ($square + $cal-padding);
   margin: 0 auto;
 
   @each $start-day, $left-indentation in $days {
