--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $font-size: 30px;
 $indentations-size: 1px;
 $week-days: 7;
 $transition-duration: 0.5s;
+$cal-padding: 10px;
 $days: "mon" 0,
 "tue" $square + $indentations-size,
 "wed" 2 * ($square + $indentations-size),
