--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -11,8 +11,7 @@
     }
   }
 
-  $days:
-    'mon' 0,
+  $days: 'mon' 0,
     'tue' 1 * $base-calendar-size + 1 * $base-calendar-gap,
     'wed' 2 * $base-calendar-size + 2 * $base-calendar-gap,
     'thu' 3 * $base-calendar-size + 3 * $base-calendar-gap,
