--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,4 +5,5 @@ $start-days: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
 $color-of-hover: #ec95a4;
 $color-of-background: #eee;
 $color-of-border: #000;
-$calendar-width: $count-of-columns * $box-size + 28px;
+$calendar-padding: 10px;
+$calendar-width: ($count-of-columns * $box-size) + ($gap * 6) + (2 * $calendar-padding);
