--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -37,7 +37,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition-property: all 0.5s;
+    transition: all 0.5s;
 
     &:hover {
       background-color: $base-calendar-bg-color;
