--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,10 @@
 .page {
+  height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
 
   &__body {
-    margin: 0 auto;
+    margin: 0;
   }
 }
