--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,16 @@ $transition-duration: 0.5s;
 $days: mon, tue, wed, thu, fri, sat, sun;
 $month-lengths: 28, 29, 30, 31;
 
+* {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+.html {
+  font-family: Arial, sans-serif;
+}
+
 .body {
   margin: 0;
 }
@@ -20,6 +30,7 @@ $month-lengths: 28, 29, 30, 31;
 
   @each $day in $days {
     &.calendar__day-start-#{$day} {
+      // stylelint-disable-next-line scss/no-global-function-names
       margin-left: calc($cell-size * index($days, $day));
     }
   }
@@ -34,19 +45,15 @@ $month-lengths: 28, 29, 30, 31;
   }
 
   &__day {
-    position: relative;
-    display: inline-block;
-    box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
     background-color: $cell-color;
     border: 1px solid black;
     cursor: pointer;
-    transition: all $transition-duration;
+    transition: background-color $transition-duration, transform $transition-duration;
 
     &::before {
       content: '';
-      font-family: Arial, sans-serif;
       font-size: $font-size;
       position: absolute;
       top: 50%;
