--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,11 @@ $width-boxs: 100px;
 $width-gap: 1px;
 $calendar-days: 31;
 $days-of-the-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$my-var: $width-boxs * 7 + 6 * $width-gap;
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -18,25 +23,26 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: $width-boxs * 7 + 6 * $width-gap;
+  width: $my-var;
   gap: $width-gap;
+
   &__day {
-    box-sizing: border-box;
     width: $width-boxs;
     height: $width-boxs;
     border: 1px solid black;
     background-color: #eee;
-    transition: all 0.5s;
+    transition: transform 0.5s ease;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 30px;
+
     &:hover {
       cursor: pointer;
       background-color: pink;
       transform: translateY(-20px);
     }
-    
+
     @for $n from 1 through $calendar-days {
       &:nth-child(#{$n})::after {
         content: "#{$n}";
@@ -46,13 +52,12 @@ body {
 
   @each $day, $n in $days-of-the-week {
     &--days-#{$day} &__day:first-child {
-        margin-left: ($width-boxs + $width-gap) * $n;
+      margin-left: ($width-boxs + $width-gap) * $n;
     }
   }
 
   @for $length from 28 through $calendar-days {
-    &--months-#{$length}
-    &__day:nth-child(n + #{$length + 1}) {
+    &--months-#{$length} &__day:nth-child(n + #{$length + 1}) {
       display: none;
     }
   }
