--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
+$calendar-padding: 10px;
 $calendar-day-height: 100px;
 $calendar-day-width: 100px;
-$days-of-week: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
-$month-lenth: ("28", "29", "30", "31");
+$days-of-week: (mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7);
+$month-lenth: (28, 29, 30, 31);
 $day-gap: 1px;
