--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,6 @@ $border-width: 1px;
 $padding: 10px;
 $days-in-week: 7;
 $gap: 1px;
-
 $days-start: (
   mon,
   tue,
@@ -45,7 +44,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     font-size: 30px;
     position: relative;
     transition: all 0.5s;
@@ -73,13 +72,12 @@ html {
       height: 100%;
       border: $border-width solid #000;
       box-sizing: border-box;
-      /* Ensure border width doesn't affect dimensions */
     }
   }
 
     // Implementing month-length modifier
     @for $i from 28 through 31 {
-      &.month-length--#{$i} {
+      &.calendar-month-length--#{$i} {
         .calendar__day:nth-child(n+#{$i + 1}) {
           display: none;
         }
@@ -95,10 +93,9 @@ html {
 
     // Implementing start-day modifier using @each loop
     @each $day in $days-start {
-      &.start-day--#{$day} {
-        $start-index: index($days-start, $day);
-        $margin: (
-          $start-index - 1) % $days-in-week; // Calculate margin for the start day
+      &.calendar-start-day--#{$day} {
+        $start-index: calendar-start-day--($days-start, $day);
+        $margin: ($start-index - 1) % $days-in-week; // Calculate margin for the start day
 
         .calendar__day:nth-child(#{-$margin + n}) {
           margin-left: calc(#{$margin * ($day-size + 2 * $border-width)} + #{$padding}
@@ -108,7 +105,7 @@ html {
     }
 
     // Adjust margin for Sunday
-    &.start-day--sun {
+    &.calendar-start-day--sun {
       .calendar__day:nth-child(1) {
         margin-left: calc(6 * ($day-size + $border-width));
       }
