add task solution

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
 }
+
 body .calendar {
   padding: 0 10px;
   margin: 20px;
@@ -9,6 +10,7 @@ body .calendar {
   gap: 1px;
   width: 706px;
 }
+
 body .calendar__day {
   width: 100px;
   height: 100px;
@@ -18,6 +20,7 @@ body .calendar__day {
   position: relative;
   transition-duration: 0.5s;
 }
+
 body .calendar__day::before {
   content: "";
   font-family: Arial, sans-serif;
@@ -27,134 +30,178 @@ body .calendar__day::before {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 body .calendar__day:hover {
   background-color: pink;
   transform: translateY(-20px);
   cursor: pointer;
 }
+
 body .calendar .calendar__day:nth-child(1)::before {
   content: "1";
 }
+
 body .calendar .calendar__day:nth-child(2)::before {
   content: "2";
 }
+
 body .calendar .calendar__day:nth-child(3)::before {
   content: "3";
 }
+
 body .calendar .calendar__day:nth-child(4)::before {
   content: "4";
 }
+
 body .calendar .calendar__day:nth-child(5)::before {
   content: "5";
 }
+
 body .calendar .calendar__day:nth-child(6)::before {
   content: "6";
 }
+
 body .calendar .calendar__day:nth-child(7)::before {
   content: "7";
 }
+
 body .calendar .calendar__day:nth-child(8)::before {
   content: "8";
 }
+
 body .calendar .calendar__day:nth-child(9)::before {
   content: "9";
 }
+
 body .calendar .calendar__day:nth-child(10)::before {
   content: "10";
 }
+
 body .calendar .calendar__day:nth-child(11)::before {
   content: "11";
 }
+
 body .calendar .calendar__day:nth-child(12)::before {
   content: "12";
 }
+
 body .calendar .calendar__day:nth-child(13)::before {
   content: "13";
 }
+
 body .calendar .calendar__day:nth-child(14)::before {
   content: "14";
 }
+
 body .calendar .calendar__day:nth-child(15)::before {
   content: "15";
 }
+
 body .calendar .calendar__day:nth-child(16)::before {
   content: "16";
 }
+
 body .calendar .calendar__day:nth-child(17)::before {
   content: "17";
 }
+
 body .calendar .calendar__day:nth-child(18)::before {
   content: "18";
 }
+
 body .calendar .calendar__day:nth-child(19)::before {
   content: "19";
 }
+
 body .calendar .calendar__day:nth-child(20)::before {
   content: "20";
 }
+
 body .calendar .calendar__day:nth-child(21)::before {
   content: "21";
 }
+
 body .calendar .calendar__day:nth-child(22)::before {
   content: "22";
 }
+
 body .calendar .calendar__day:nth-child(23)::before {
   content: "23";
 }
+
 body .calendar .calendar__day:nth-child(24)::before {
   content: "24";
 }
+
 body .calendar .calendar__day:nth-child(25)::before {
   content: "25";
 }
+
 body .calendar .calendar__day:nth-child(26)::before {
   content: "26";
 }
+
 body .calendar .calendar__day:nth-child(27)::before {
   content: "27";
 }
+
 body .calendar .calendar__day:nth-child(28)::before {
   content: "28";
 }
+
 body .calendar .calendar__day:nth-child(29)::before {
   content: "29";
 }
+
 body .calendar .calendar__day:nth-child(30)::before {
   content: "30";
 }
+
 body .calendar .calendar__day:nth-child(31)::before {
   content: "31";
 }
-body .calendar--start--mon :first-child {
-  margin-left: 0px;
+
+.calendar--month-length--28 body .calendar:nth-child(n+29) {
+  display: none;
 }
-body .calendar--start--tue :first-child {
+
+.calendar--month-length--29 body .calendar:nth-child(n+30) {
+  display: none;
+}
+
+.calendar--month-length--30 body .calendar:nth-child(n+31) {
+  display: none;
+}
+
+.calendar--month-length--31 body .calendar:nth-child(n+32) {
+  display: none;
+}
+
+body .calendar--start--day--mon :first-child {
+  margin-left: 0;
+}
+
+body .calendar--start--day--tue :first-child {
   margin-left: 101px;
 }
-body .calendar--start--wed :first-child {
+
+body .calendar--start--day--wed :first-child {
   margin-left: 202px;
 }
-body .calendar--start--thu :first-child {
+
+body .calendar--start--day--thu :first-child {
   margin-left: 303px;
 }
-body .calendar--start--fri :first-child {
+
+body .calendar--start--day--fri :first-child {
   margin-left: 404px;
 }
-body .calendar--start--sat :first-child {
+
+body .calendar--start--day--sat :first-child {
   margin-left: 505px;
 }
-body .calendar--start--sun :first-child {
+
+body .calendar--start--day--sun :first-child {
   margin-left: 606px;
 }
-body .calendar--month--lenght--28 .calendar__day:nth-child(n+28):nth-child(n-31) {
-  display: none;
-}
-body .calendar--month--lenght--29 .calendar__day:nth-child(n+29):nth-child(n-31) {
-  display: none;
-}
-body .calendar--month--lenght--30 .calendar__day:nth-child(n+30):nth-child(n-31) {
-  display: none;
-}
-body .calendar--month--lenght--31 .calendar__day:nth-child(n+31):nth-child(n-31) {
-  display: none;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
