add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,14 @@
-$gap: 1px;
-$columns: 7;
-$padding: 10px;
-$days: "mon" 0,
-       "tue" 1,
-       "wed" 2,
-       "thu" 3,
-       "fri" 4,
-       "sat" 5,
-       "sun" 6;
-$cell-size: 100px;
-
-body {
-  margin: 0;
-}
+@import 'variables';
 
 .calendar {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.calendar-field {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
