add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,7 +41,7 @@
 }
 
 @each $day, $value in $days {
-  .calendar--start-day--#{$day} {
+  .calendar__field--start-day--#{$day} {
     .calendar__day:nth-child(1) {
       margin-left:($gap + $cell-size) * $value;
     }
@@ -60,7 +60,7 @@
 }
 
 @for $length from 28 through 31 {
-  .calendar--month-length--#{$length} {
+  .calendar__field--month-length--#{$length} {
     .calendar__day:nth-child(n + #{$length + 1}) {
       display: none;
     }
