--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,68 @@
-body {
-  margin: 0;
+@import 'variables';
+
+* {
+  box-sizing: border-box;
 }
+
+.calendar, body {
+  margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.calendar {
+  width: 710px;
+  height: min-content;
+  gap: 1px;
+}
+
+.calendar__day::before {
+  content: "";
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar__day {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;
+  border: 1px solid #000;
+  font-size: 30px;
+  transition: all .5s;
+  cursor: pointer;
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+}
+
+.calendar--start-day-sun :first-child {
+  margin-left: 606px;
+}
+
+.calendar__day:hover {
+  background-color: pink;
+  transform: translateY(-20px);
+}
+
+@each $day, $size in $week-days {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: #{$size};
+  }
+}
+
+@for $curret-month-size from 28 through 31 {
+  .calendar--month-length-#{$curret-month-size}
+  .calendar__day:nth-child(n + #{$curret-month-size + 1}) {
+    display: none;
+  }
+}
+
+
+
+
