add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,4 @@
-$day-size: 100px;
-$border-width: 1px;
-$padding: 10px;
-$days-in-week: 7;
-$gap: 1px;
-$days-start: (
-  mon,
-  tue,
-  wed,
-  thu,
-  fri,
-  sat,
-  sun
-);
+@import './utils/variables.css';
 
 @function find-index($list, $value) {
   @return index($list, $value);
