--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,58 +1,47 @@
-@import url(variables.scss);
+@import "./loops.css";
+@import "./variables.css";
 
 body {
   margin: 0;
-}
 
-.calendar {
-  padding: 0 10px;
-  margin: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: $day-block-gap;
-  width: $calendar-width;
+  .calendar {
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 10px;
+    gap: $day-block-gap;
+    width: $calendar-width;
 
-  &__day {
-    width: $cell-size;
-    height: $cell-size;
-    border: 1px solid black;
-    box-sizing: border-box;
-    background-color: #eee;
-    position: relative;
-    transition-duration: 0.5s;
+    &__cell {
+      height: $cell-size;
+      width: $cell-size;
+      background-color: #eee;
+      border: 1px solid #000;
+      position: relative;
+      transition-duration: 0.5s;
+      box-sizing: border-box;
 
-    &::before {
-      content: "";
-      font-family: Arial, sans-serif;
-      font-size: 30px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+      &::before {
+        content: "";
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
 
-    &:hover {
-      background-color: pink;
-      transform: translateY(-20px);
-      cursor: pointer;
+      &:hover {
+        background-color: pink;
+        transform: translateY(-20px);
+        cursor: pointer;
+      }
     }
 
     @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
+      .calendar__cell:nth-child(#{$i})::before {
         content: "#{$i}";
       }
-    }
-  }
-
-  @for $i from 28 through 31 {
-    &--month-length--#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
-      display: none;
-    }
-  }
-
-  @each $day, $number in $days-of-week {
-    .calendar--start-day--#{$day} :first-child {
-      margin-left: $number * ($cell-size + $day-block-gap);
     }
   }
 }
