--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
-body {
+$days: tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$cell-size: 100px;
+$calendar-padding: 10px;
+$calendar-gap: 1px;
+
+* {
+  box-sizing: border-box;
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  gap: $calendar-gap;
+  flex-wrap: wrap;
+  padding: $calendar-padding;
+  width: ($cell-size * 7) + ($calendar-gap * 6) + ($calendar-padding * 2);
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    display: flex;
+    visibility: hidden;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    border: 1px solid black;
+
+    transition: transform 0.5s;
+    cursor: pointer;
+
+    &::before {
+      display: block;
+      font-size: 30px;
+      font-family: Arial, sans-serif;
+    }
+
+    &:hover{
+      transform: translateY(-20px);
+      background-color: pink;
+    }
+  }
+}
+
+@for $day from 28 through 31 {
+  .calendar--month-length-#{$day} {
+    @for $newDay from 1 through $day {
+      .calendar__day:nth-child(#{$newDay}) {
+        visibility: visible;
+        &::before {
+          content: $newDay + '';
+        }
+      }
+    }
+  }
+}
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: ($calendar-gap + $cell-size) * $i;
+  }
 }
