--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -18,7 +22,6 @@
 
 .calendar__day::before {
   content: "";
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
 
