--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -10,11 +10,11 @@ body {
 .calendar {
   display: flex;
   width: calc(#{$box-size} * 7 + 20px);
-  padding: 10px;
   flex-wrap: wrap;
+  padding: 10px;
   gap: $box-gap;
 
-  $week: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": "4", "sat": 5, "sun": 7);
+  $week: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
 
   @each $day, $i in $week {
     &__start-day--#{$day} :first-child {
