--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,11 @@ $calendar-gap: 1px;
   margin: 0;
 }
 
+.title {
+  text-align: center;
+  margin-block: 0.8em;
+}
+
 .calendar {
   display: flex;
   gap: $calendar-gap;
