--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,62 +1,51 @@
-$days: tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
-$cell-size: 100px;
-$calendar-padding: 10px;
-$calendar-gap: 1px;
+@import 'variables';
 
-* {
-  box-sizing: border-box;
+body {
   margin: 0;
 }
 
 .calendar {
+  width: $calendar-width;
   display: flex;
   gap: $calendar-gap;
-  flex-wrap: wrap;
   padding: $calendar-padding;
-  width: ($cell-size * 7) + ($calendar-gap * 6) + ($calendar-padding * 2);
+  flex-wrap: wrap;
 
-  &__day {
-    width: $cell-size;
-    height: $cell-size;
-    display: flex;
-    visibility: hidden;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    background-color: #eee;
-    border: 1px solid black;
-
-    transition: transform 0.5s;
-    cursor: pointer;
-
-    &::before {
-      display: block;
-      font-size: 30px;
-      font-family: Arial, sans-serif;
-    }
-
-    &:hover{
-      transform: translateY(-20px);
-      background-color: pink;
+  @for $number from 1 through 31 {
+    & :nth-child(#{$number})::before {
+      content: '#{$number}';
     }
   }
-}
 
-@for $day from 28 through 31 {
-  .calendar--month-length-#{$day} {
-    @for $newDay from 1 through $day {
-      .calendar__day:nth-child(#{$newDay}) {
-        visibility: visible;
-        &::before {
-          content: $newDay + '';
-        }
+  &__day {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    box-sizing: border-box;
+    width: $day-width;
+    height: $day-height;
+    display: none;
+  }
+
+  @each $amount-days in $month-lengh {
+    &--month-lengh--#{$amount-days} :nth-child(-n + #{$amount-days}) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid black;
+      background-color: $day-color;
+      transition-duration: $transition-time;
+
+      &:hover {
+        cursor: pointer;
+        background-color: pink;
+        transform: translateY(-$day-translate);
       }
     }
   }
-}
 
-@each $day, $i in $days {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: ($calendar-gap + $cell-size) * $i;
+  @each $coefficient, $day-start in $days-start {
+    &--start-day--#{$day-start} :first-child{
+      margin-left: ($day-width + $calendar-gap) * $coefficient;
+    }
   }
 }
