add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './utils/variables.css';
+@import './utils/variables';
 
 @function find-index($list, $value) {
   @return index($list, $value);
