--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,6 +1,5 @@
 .calendar {
   width: $calendar-width;
-  @include contentPadding;
 
   display: flex;
   justify-content: flex-start;
@@ -8,6 +7,7 @@
   flex-wrap: wrap;
   gap: $calendar-gap;
 
+  @include content-padding;
 
   @for $number from 1 through 31 {
     & :nth-child(#{$number})::before {
