--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,7 +29,7 @@
     font-size: 30px;
   }
 
-  @each $count in $month-length {
+  @for $count from 1 through $max-month-length {
     &-month-length--#{$count} :nth-child(-n + #{$count}) {
       display: flex;
       justify-content: center;
