--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,7 +5,7 @@ $day-block-size: 100px;
 $calendar-gap: 1px;
 $calendar-padding: 10px;
 $calendar-width: ($day-block-size * 7) + ($calendar-gap * 6) + ($calendar-padding * 2);
-$month-length: 28, 29, 30, 31;
+$max-month-length: 31;
 $days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
 $day-block-translate: 20px;
 $transition-time: 0.5s;
