--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -6,6 +6,7 @@ $calendar-gap: 1px;
 $calendar-padding: 10px;
 $calendar-width: ($day-block-size * 7) + ($calendar-gap * 6) + ($calendar-padding * 2);
 $max-month-length: 31;
+$min-month-length: 28;
 $days: 0 'mon', 1 'tue', 2 'wed', 3 'thu', 4 'fri', 5 'sat', 6 'sun';
 $day-block-translate: 20px;
 $transition-time: 0.5s;
