--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,63 @@
+@import "/styles/variables";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  padding: 10px;
+  width: (7 * $square-size + 20) + (6 * $gap-size);
+
+  &__day {
+    position: relative;
+    width: $square-size;
+    height: $square-size;
+    border: 1px solid #000;
+    background-color: #eee;
+    text-align: center;
+    line-height: $square-size;
+
+    @for $i from 1 through $day-num {
+      &:nth-child(#{$i})::after {
+        content: "#{$i}";
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+      }
+    }
+
+    @for $i from 28 through $day-num {
+      &__month-length--#{$i}
+      &::nth-child(n + #{$i + 1}) {
+        display: none;
+      }
+    }
+
+    &:hover {
+      background-color: pink;
+      cursor: pointer;
+      transform: translateY(-20px);
+      transition: all 0.5s ease;
+    }
+  }
+}
+
+$days: mon 0, tue 1 wed 2, thu 3 fri 4, sat 5, sun 6;
+
+@each $day, $i in $days {
+  .calendar--start-day-#{$day} {
+    &--day:first-child {
+      margin-left: ($square-size + $gap-size) * $i;
+    }
+  }
 }
