--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ body {
   gap: $gap-size;
   width: 710px;
 
-  &-day {
+  &__day {
     width: $box-size;
     height: $box-size;
     border: $border-size solid black;
@@ -48,13 +48,13 @@ body {
 }
 
 @each $day, $size in $days {
-  .calendar--start-day-#{$day} .calendar-day:first-child {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
     margin-left: #{$size};
   }
 }
 
 @for $month-length from 28 through 31 {
-  .calendar-day:nth-child(n + #{$month-length + 1}) {
+  .calendar__day:nth-child(n + #{$month-length + 1}) {
     display: none;
   }
 }
