--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,10 @@
 
 body {
   margin: 0;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -45,19 +48,21 @@ body {
       }
     }
   }
-}
 
-@each $day, $size in $days {
-  .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: #{$size};
+  @each $day, $size in $days {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: #{$size};
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &__day:nth-child(n + #{$month-length + 1}) {
+      display: none;
+    }
   }
 }
 
-@for $month-length from 28 through 31 {
-  .calendar__day:nth-child(n + #{$month-length + 1}) {
-    display: none;
-  }
-}
+
 
 
 
