add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,8 +50,8 @@ body {
   }
 
   @each $day, $size in $days {
-    &--start-day-#{$day} .calendar__day:first-child {
-      margin-left: #{$size};
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $size;
     }
   }
 
