--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,4 +1,11 @@
 $box-size: 100px;
 $gap-size: 1px;
 $border-size: 1px;
-$days: 0, 1, 2, 3, 4, 5, 6;
+$days: ( mon: 0,
+ tue: 101px,
+ wed: 102px,
+ thu: 303px,
+ fri: 404px,
+ sat: 505px,
+ sun: 606px
+ );
