add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: $gap-size;
-  width: 710px;
+  width: ($box-size * $calendar-row) + 10px;
 
   &__day {
     width: $box-size;
@@ -26,7 +26,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition-duration: 0.5s;
+    transition: 0.5s;
 
     &:first-child {
       margin-left: 505px;
@@ -61,10 +61,3 @@ body {
     }
   }
 }
-
-
-
-
-
-
-
