--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
+@import './utilities/variables';
+@import './blocks/calendar';
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
 }
