--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,77 @@
+$cal-gap: 1px;
+$cal-padding: 10px;
+$day-color: #eee;
+$cal-day-size: 100px;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  align-items: center;
+  height: 100vh;
 }
+
+@function getwidth($width) {
+  @return (($cal-padding * 2) + ($cal-gap * 6) + ($cal-day-size * 7));
+}
+
+$day: (
+  'mon' 0,
+  'tue' 101px,
+  'wed' 202px,
+  'thu' 303px,
+  'fri' 404px,
+  'sat' 505px,
+  'sun' 606px
+);
+
+.calendar {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cal-gap;
+  padding: $cal-padding;
+  width: getwidth($cal-day-size);
+
+  @each $name, $width in $day {
+    &--start-day--#{$name}>:first-child {
+      margin-left: $width;
+    }
+  }
+
+  @for $i from 28 to 31 {
+    &--month-length--#{$i} > :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+}
+
+.calendar__day {
+  width: $cal-day-size;
+  height: $cal-day-size;
+  background-color: #eee;
+  border: 1px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.5s ease;
+
+  @for $i from 1 through 31 {
+    &:nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+
+  &:hover {
+    transform: translateY(-20px);
+    cursor: pointer;
+    background-color: pink;
+  }
+}
+
+
