add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,10 +28,6 @@ body {
     justify-content: center;
     transition: 0.5s;
 
-    &:first-child {
-      margin-left: 505px;
-    }
-
     &::before {
       content: '';
       font-size: 30px;
@@ -50,7 +46,7 @@ body {
   }
 
   @each $day, $size in $days {
-    &--start-day-#{$day} &__day:first-child {
+    &--start-day--#{$day} &__day:first-child {
       margin-left: $size;
     }
   }
