--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,5 @@
-$cal-gap: 1px;
-$cal-padding: 10px;
-$day-color: #eee;
-$cal-day-size: 100px;
+@use "./utils/variables";
+@use "./utils/functions";
 
 * {
   box-sizing: border-box;
@@ -14,27 +12,15 @@ body {
   height: 100vh;
 }
 
-@function getwidth($width) {
-  @return (($cal-padding * 2) + ($cal-gap * 6) + ($cal-day-size * 7));
-}
-
-$day: (
-  'mon' 0,
-  'tue' 101px,
-  'wed' 202px,
-  'thu' 303px,
-  'fri' 404px,
-  'sat' 505px,
-  'sun' 606px
-);
-
 .calendar {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  gap: $cal-gap;
-  padding: $cal-padding;
-  width: getwidth($cal-day-size);
+  gap: variables.$cal-gap;
+  padding: variables.$cal-padding;
+  width: functions.getwidth(variables.$cal-day-size);
+
+  @import "./utils/fragments";
 
   @each $name, $width in $day {
     &--start-day--#{$name}>:first-child {
@@ -50,8 +36,8 @@ $day: (
 }
 
 .calendar__day {
-  width: $cal-day-size;
-  height: $cal-day-size;
+  width: variables.$cal-day-size;
+  height: variables.$cal-day-size;
   background-color: #eee;
   border: 1px solid black;
   font-family: Arial, Helvetica, sans-serif;
