--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,48 @@
-body {
+@import 'utils/variables';
+@import 'utils/reset';
+
+.calendar {
   margin: 0;
+  padding: $padding-value;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-value;
+  width: 7 * $day-block-size + ($padding-value * 2) + ($gap-value * 6) ;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+    width: $day-block-size;
+    height: $day-block-size;
+    cursor: pointer;
+    transition: 500ms;
+  }
+
+  &__day:hover {
+    transform: translate(0,-20px);
+  background-color: pink;
+  }
+
+  @for $day__num from 1 through $days-count {
+    &__day:nth-child(3n + #{$day__num})::before {
+      content: "#{$day__num}";
+      font-size: 30px;
+    }
+  }
+
+  @each $day, $ind in $days-name {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $ind * ($day_block_size + 1px);
+    }
+  }
+
+  @for $last-day from 28 through 31 {
+    &--month-length-#{$last-day} &__day:nth-child(n + #{$last-day + 1}) {
+      display: none;
+    }
+  }
 }
