--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,10 @@
 @import './days';
 
 body {
-  margin: 0;
+  margin: auto;
+}
+
+html {
+  background-color: #eee;
+  font-family: Arial, Helvetica, sans-serif;
 }
