--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,6 +16,9 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   max-width: 706px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .day {
@@ -23,6 +26,7 @@ body {
   height: 100px;
   padding: 10px;
   margin: 0;
+  list-style: none;
   background-color: #eee;
   border: 1px solid #000;
   font-family: Arial, serif;
@@ -30,18 +34,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.day:hover {
   cursor: pointer;
-  transform: translateY(-20px);
   transition-duration: 0.5s;
 }
 
-ul, li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.day:hover {
+  transform: translateY(-20px);
+  background-color: #ffc0cb;
 }
 
 li:nth-child(n+1)::before {
