--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,7 @@ body {
     justify-content: center;
 
     @for $cell from 1 through 31 {
-      &--#{$cell}::before {
+      &:nth-child(#{$cell})::before {
         content: "#{$cell}";
         font-family: $number-font;
         font-size: $number-size;
@@ -43,7 +43,7 @@ body {
     }
 
     @for $length from 28 through 31 {
-      &--month-length-#{$length} {
+      &--month-length-31:nth-child(#{$length}) {
         display: none;
       }
     }
